--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "app-client.js",
   "dependencies": {
-    "babel-loader": "^6.2.0",
     "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
     "babel-preset-react": "^6.3.13",
     "bootstrap": "^3.3.6",
     "express": "^4.13.3",
     "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "webpack": "^1.12.9"
   },
   "devDependencies": {},
