--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "express": "^4.13.3",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-router": "^0.13.5",
+    "react-router-component": "^0.28.0",
     "webpack": "^1.12.9"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "react-router-component": "^0.28.0"
+  },
   "scripts": {
     "prestart": "webpack",
     "start": "node app-server.js"
